(chore) notebook wording

--- a/bangumi_takeout_colab.ipynb
+++ b/bangumi_takeout_colab.ipynb
@@ -67,8 +67,7 @@
         "display(button)\n",
         "\n",
         "def callback(wdgt):\n",
-        "  # print(checkbox_as_json.value)\n",
-        "\n",
+        "    print(\"uploading... may take a while...\")\n",
         "    with open(\"takeout.json\", \"wb\") as fp:\n",
         "      for k, v in existing_upload.value.items():\n",
         "        fp.write(v[\"content\"])\n",
@@ -116,9 +115,7 @@
         "id": "xiRKLf5YaChC"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
