(misc) update wording

--- a/bangumi_takeout_more_colab.ipynb
+++ b/bangumi_takeout_more_colab.ipynb
@@ -1,22 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "bangumi_takeout_more_colab.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wNM77hkpJr4Z"
+      },
       "source": [
         "# Bangumi Takeout More\n",
         "\n",
@@ -45,10 +33,7 @@
         "为了避免对 Bangumi 服务器造成过大压力，每个网络请求之间会间隔一秒，还请耐心等待。\n",
         "\n",
         "理论上可以在 `User ID` 中填入他人的 User ID，可以备份他人公开的项目。但此种用法未经测试，故不推荐。"
-      ],
-      "metadata": {
-        "id": "wNM77hkpJr4Z"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -87,7 +72,7 @@
         "display(topic)\n",
         "blog = widgets.Checkbox(value=True, description='日志', indent=True)\n",
         "display(blog)\n",
-        "created_index = widgets.Checkbox(value=True, description='创建的目录', indent=True)\n",
+        "created_index = widgets.Checkbox(value=True, description='我创建的目录', indent=True)\n",
         "display(created_index)\n",
         "collected_index = widgets.Checkbox(value=True, description='收藏的目录', indent=True)\n",
         "display(collected_index)\n",
@@ -134,5 +119,20 @@
         "button.on_click(callback)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "bangumi_takeout_more_colab.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
