(misc) fix wording this commit reverts 7f1b78e

--- a/bangumi_takeout_more_colab.ipynb
+++ b/bangumi_takeout_more_colab.ipynb
@@ -72,7 +72,7 @@
         "display(topic)\n",
         "blog = widgets.Checkbox(value=True, description='日志', indent=True)\n",
         "display(blog)\n",
-        "created_index = widgets.Checkbox(value=True, description='我创建的目录', indent=True)\n",
+        "created_index = widgets.Checkbox(value=True, description='创建的目录', indent=True)\n",
         "display(created_index)\n",
         "collected_index = widgets.Checkbox(value=True, description='收藏的目录', indent=True)\n",
         "display(collected_index)\n",
