(feat) allow manual timezone offset in colab issue #11

--- a/bangumi_takeout_colab.ipynb
+++ b/bangumi_takeout_colab.ipynb
@@ -13,11 +13,12 @@
         "## 运行步骤\n",
         "\n",
         "1. 请点击菜单栏「代码执行程序 - 全部运行」（繁體中文「執行階段－全部執行」）\n",
-        "2. 卷动到页面底部，点击认证链接并选择「允许」，将下一个页面中的 `access_token` 复制到页面底部的表单中 Token 填写处\n",
+        "2. 卷动到页面底部，点击认证链接并选择「创建个人令牌 - 任意名字/7天 - Submit」，将下一个页面中的 `access_token` 复制到页面底部的表单中 Token 填写处\n",
         "3. 选择数据源，具体请参见项目主页，如无特殊要求保持默认即可\n",
-        "4. 如果有之前导出的 `takeout.json` 文件，可点击「Upload」上传，此时会采用增量方式更新收视进度，能极大提升导出速度。如无可忽略。\n",
-        "5. 选择导出格式：`json`, `html`，`csv`\n",
-        "5. 最后点击「Run」以启动导出过程\n",
+        "4. 选择时区偏移。在 Colab 上运行时，若不设置此项会导致输出结果中时区为 UTC。如无特殊需要可保持默认 `+8` 不变\n",
+        "5. 如果有之前导出的 `takeout.json` 文件，可点击「Upload」上传，此时会采用增量方式更新收视进度，能极大提升导出速度。如无可忽略\n",
+        "6. 选择导出格式：`json`, `html`，`csv`\n",
+        "7. 最后点击「Run」以启动导出过程\n",
         "\n",
         "## 常见问题\n",
         "\n",
@@ -32,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "rgbnm3AlQivM"
       },
@@ -43,17 +44,29 @@
         "import json\n",
         "from google.colab import files\n",
         "\n",
-        "token_html = widgets.HTML(value='<a href=\"https://api.bgm.tv/v0/oauth/redirect\" target=\"_blank\">Click here to generate access_token.</a>')\n",
+        "display(widgets.HTML(value='基本参数'))\n",
+        "\n",
+        "\n",
+        "token_html = widgets.HTML(value='<a href=\"https://api.bgm.tv/v0/oauth/redirect\" target=\"_blank\">点击此链接生成 Access Token</a>')\n",
         "display(token_html)\n",
         "\n",
-        "text = widgets.Text(value='',placeholder='Paste access_token here!',description='Token:',disabled=False)\n",
+        "text = widgets.Text(value='',placeholder='请将 Access Token 复制到此',description='Token:',disabled=False)\n",
         "display(text)\n",
         "\n",
-        "select = widgets.Dropdown(options=['Bangumi API', 'Bangumi Archive'],value='Bangumi Archive',description='Source:',disabled=False,)\n",
+        "select = widgets.Dropdown(options=['Bangumi API', 'Bangumi Archive'],value='Bangumi Archive',description='数据源',disabled=False,)\n",
         "display(select)\n",
+        "\n",
+        "timezone_offset_text = widgets.Text(value='+8',placeholder='输出使用的时区，从 -12 到 12',description='时区偏移:',disabled=False)\n",
+        "display(timezone_offset_text)\n",
+        "\n",
+        "display(widgets.HTML(value='如有，请上传之前导出的 takeout.json。'))\n",
+        "\n",
         "\n",
         "existing_upload = widgets.FileUpload(accept='.json',multiple=False)\n",
         "display(existing_upload)\n",
+        "\n",
+        "display(widgets.HTML(value='输出格式'))\n",
+        "\n",
         "\n",
         "checkbox_as_json = widgets.Checkbox(value=True, description='JSON', indent=True)\n",
         "display(checkbox_as_json)\n",
@@ -63,7 +76,7 @@
         "display(checkbox_as_csv)\n",
         "\n",
         "\n",
-        "button = widgets.Button(tooltip='Run',description=\"Run\")\n",
+        "button = widgets.Button(tooltip='运行',description=\"运行\")\n",
         "display(button)\n",
         "\n",
         "def callback(wdgt):\n",
@@ -94,15 +107,18 @@
         "      json.dump(tokens, f)\n",
         "    \n",
         "    fetch.main()\n",
+        "\n",
+        "    tz_offset_hours = int(timezone_offset_text.value)\n",
+        "\n",
         "    if checkbox_as_json.value:\n",
         "      files.download('takeout.json')\n",
         "\n",
         "    if checkbox_as_html.value:\n",
-        "      generate_html.main()\n",
+        "      generate_html.main(offset_hours=tz_offset_hours)\n",
         "      files.download('takeout.html') \n",
         "\n",
         "    if checkbox_as_csv.value:\n",
-        "      generate_csv.main()\n",
+        "      generate_csv.main(offset_hours=tz_offset_hours)\n",
         "      files.download('takeout.csv')\n",
         "\n",
         "button.on_click(callback)"
