(misc) wording fix

--- a/bangumi_takeout_colab.ipynb
+++ b/bangumi_takeout_colab.ipynb
@@ -53,7 +53,7 @@
         "text = widgets.Text(value='',placeholder='请将 Access Token 复制到此',description='Token:',disabled=False)\n",
         "display(text)\n",
         "\n",
-        "select = widgets.Dropdown(options=['Bangumi API', 'Bangumi Archive'],value='Bangumi Archive',description='数据源',disabled=False,)\n",
+        "select = widgets.Dropdown(options=['Bangumi API', 'Bangumi Archive'],value='Bangumi Archive',description='数据源:',disabled=False,)\n",
         "display(select)\n",
         "\n",
         "timezone_offset_text = widgets.Text(value='+8',placeholder='输出使用的时区，从 -12 到 12',description='时区偏移:',disabled=False)\n",
