--- a/bangumi_takeout_more_colab.ipynb
+++ b/bangumi_takeout_more_colab.ipynb
@@ -66,16 +66,25 @@
         "cookies_upload = widgets.FileUpload(accept='.txt',multiple=False)\n",
         "display(cookies_upload)\n",
         "\n",
-        "display(widgets.HTML(value='<hr> <h3>备份内容</h3>'))\n",
+        "display(widgets.HTML(value='<hr> <h3>备份内容</h3> 作者个人建议：先不勾选「深度备份」，备份一次基础数据；然后再对每个项目单独勾选深度备份。'))\n",
         "\n",
         "topic = widgets.Checkbox(value=True, description='我发表的讨论', indent=True)\n",
         "display(topic)\n",
+        "reply_topic = widgets.Checkbox(value=True, description='我回复的讨论', indent=True)\n",
+        "display(reply_topic)\n",
         "blog = widgets.Checkbox(value=True, description='日志', indent=True)\n",
         "display(blog)\n",
         "created_index = widgets.Checkbox(value=True, description='创建的目录', indent=True)\n",
         "display(created_index)\n",
         "collected_index = widgets.Checkbox(value=True, description='收藏的目录', indent=True)\n",
         "display(collected_index)\n",
+        "timeline = widgets.Checkbox(value=True, description='时间胶囊（备份过程比较慢）', indent=True)\n",
+        "display(timeline)\n",
+        "person = widgets.Checkbox(value=True, description='收藏的人物（虚拟&现实）', indent=True)\n",
+        "display(person)\n",
+        "friend = widgets.Checkbox(value=True, description='好友', indent=True)\n",
+        "display(friend)\n",
+        "\n",
         "\n",
         "display(widgets.HTML(value='深度备份（不仅备份讨论/日志/收藏列表，也备份对应的网页）'))\n",
         "\n",
@@ -109,9 +118,13 @@
         "    dump_personal.main(user_id=user_id.value, \n",
         "                       user_agent=ua.value, \n",
         "                       topic=topic.value, \n",
+        "                       reply_topic=reply_topic.value,\n",
         "                       blog=blog.value, \n",
         "                       created_index=created_index.value, \n",
-        "                       collected_index=collected_index.value, \n",
+        "                       collected_index=collected_index.value,\n",
+        "                       timeline=timeline.value,\n",
+        "                       person=person.value,\n",
+        "                       friend=friend.value, \n",
         "                       deep=deep.value)\n",
         "  \n",
         "    files.download(\"dump.zip\")\n",
@@ -126,11 +139,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.3 ('base')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.3"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "a11708fc55849f7031cd9c66719aef86f12453b673aff67c58daabaa198d07a2"
+      }
     }
   },
   "nbformat": 4,
