security: 更新指引，删除 Get cookies.txt 扩展的使用

--- a/bangumi_takeout_more_colab.ipynb
+++ b/bangumi_takeout_more_colab.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "wNM77hkpJr4Z"
@@ -12,6 +13,16 @@
         "\n",
         "项目主页：[jerrylususu/bangmui-takeout-py](https://github.com/jerrylususu/bangumi-takeout-py)\n",
         "\n",
+        "\n",
+        "# 重要安全警告\n",
+        "如果你在 2023/3/7 之前使用过本脚本，你可能已经安装了 Get Cookies.txt 插件。这一插件最近被发现为恶意插件。请尽快遵循以下指引以最小化损失：\n",
+        "1. 从所有浏览器中移除 Get cookies.txt 扩展（Chrome 系浏览器应该已经通过自动的安全机制移除）\n",
+        "2. 强烈建议：清除浏览器的所有 cookies，并重新登录所有网站。（Chrome 系：设置-隐私和安全性-清除浏览数据-勾选清除 cookies）最坏情况应该假设所有 cookies 都已泄漏。绝大部分网站在重新登录后会生成新的 cookies，从而将之前的 cookies 废弃。\n",
+        "\n",
+        "[Bangumi 上的相关讨论](https://bgm.tv/group/topic/378915)\n",
+        "\n",
+        "直到找到更安全的获取 Cookies 方式前，请不要使用本项目进行导出！\n",
+        "\n",
         "## 安全声明\n",
         "本笔记本使用 Cookies 与 Bangumi 交互。所有请求都为读请求，没有任何写操作。为保护数据安全，推荐在运行完本脚本后手动在 Bangumi 主站登出再登入以无效化提交至脚本的 Cookie。\n",
         "\n",
@@ -20,15 +31,17 @@
         "1. 请点击菜单栏「代码执行程序 - 全部运行」（繁體中文「執行階段－全部執行」），随后卷动到页面底部，开始填写执行本脚本所需的信息。\n",
         "2. `User-Agent` 字符串：点击提供的链接，将页面上半部分文本框内的内容复制并填入。（通常以 `Mozilla/5.0` 开始）\n",
         "3. `User ID`：打开 Bangumi 首页，点击右上角个人头像进入个人主页，个人主页的网址的最后一部分即为 User ID。若未自定义通常为数字。\n",
-        "4. `Cookies.txt`：需要使用浏览器插件导出 Bangumi 主站的 Cookies。点击链接安装插件，然后打开 Bangumi 主页，点击插件图标，选择 Export，将下载文件夹中新增的 txt 上传即可。（文件名通常是一长串字符+数字 (UUID)）。\n",
+        "~~4. `Cookies.txt`：需要使用浏览器插件导出 Bangumi 主站的 Cookies。点击链接安装插件，然后打开 Bangumi 主页，点击插件图标，选择 Export，将下载文件夹中新增的 txt 上传即可。（文件名通常是一长串字符+数字 (UUID)）。~~ （见上方重要安全警告）\n",
         "5. 选择导出内容，以及是否要深度导出。不勾选深度导出时，导出内容仅为讨论/日志/目录的列表，包含如标题、ID、创建时间、URL 等元数据，但不含具体的数据。勾选深度导出则会同时导出元数据和具体数据（讨论和日志以 HTML 网页形式，目录同时以 HTML 网页和 JSON 形式）。\n",
         "6. 最后点击「运行」以启动导出过程。执行完成会自动触发 `dump.zip` 的下载。\n",
+        "\n",
+        "\n",
         "\n",
         "## 常见问题\n",
         "\n",
         "表单可能需要稍等一会才会显示（需要等待运行时分配，进度会在右上角显示），请耐心等待，最长应该不会超过一分钟。\n",
         "\n",
-        "上传 `Cookies.txt` 的过程中没有进度显示，需要稍等一会。也可以用 Colab 界面左侧的文件面板上传。\n",
+        "~~上传 `Cookies.txt` 的过程中没有进度显示，需要稍等一会。也可以用 Colab 界面左侧的文件面板上传。~~\n",
         "\n",
         "为了避免对 Bangumi 服务器造成过大压力，每个网络请求之间会间隔一秒，还请耐心等待。\n",
         "\n",
@@ -61,7 +74,7 @@
         "user_id = widgets.Text(value='',placeholder='通常为数字，不是用户名',description='User ID:',disabled=False)\n",
         "display(user_id)\n",
         "\n",
-        "display( widgets.HTML(value='上传 Cookies.txt，可以通过 <a href=\"https://chrome.google.com/webstore/detail/get-cookiestxt/bgaddhkoddajcdgocldbbfleckgcbcid\" target=\"_blank\">Get Cookies.txt</a> 插件获取。 '))\n",
+        "# display( widgets.HTML(value='上传 Cookies.txt，可以通过 <a href=\"https://chrome.google.com/webstore/detail/get-cookiestxt/bgaddhkoddajcdgocldbbfleckgcbcid\" target=\"_blank\">Get Cookies.txt</a> 插件获取。 '))\n",
         "\n",
         "cookies_upload = widgets.FileUpload(accept='.txt',multiple=False)\n",
         "display(cookies_upload)\n",
