fix: Colab 笔记本不再使用插件导出 cookie

--- a/bangumi_takeout_more_colab.ipynb
+++ b/bangumi_takeout_more_colab.ipynb
@@ -14,8 +14,11 @@
         "项目主页：[jerrylususu/bangmui-takeout-py](https://github.com/jerrylususu/bangumi-takeout-py)\n",
         "\n",
         "\n",
-        "# 重要安全警告\n",
-        "如果你在 2023/3/7 之前使用过本脚本，你可能已经安装了 Get Cookies.txt 插件。这一插件最近被发现为恶意插件。请尽快遵循以下指引以最小化损失：\n",
+        "# <font color='red'>重要安全警告</font>\n",
+        "\n",
+        "<font color='red'>⚠️ 如果在 2023/3/7 前使用过本工具，请务必阅读！</font> \n",
+        "\n",
+        "如果你在 2023/3/7 之前使用过本工具，你可能已经安装了 Get Cookies.txt 插件。这一插件最近被发现为恶意插件。请尽快遵循以下指引以最小化损失：\n",
         "1. 从所有浏览器中移除 Get cookies.txt 扩展（Chrome 系浏览器应该已经通过自动的安全机制移除）\n",
         "2. 强烈建议：清除浏览器的所有 cookies，并重新登录所有网站。（Chrome 系：设置-隐私和安全性-清除浏览数据-勾选清除 cookies）最坏情况应该假设所有 cookies 都已泄漏。绝大部分网站在重新登录后会生成新的 cookies，从而将之前的 cookies 废弃。\n",
         "\n",
@@ -31,7 +34,7 @@
         "1. 请点击菜单栏「代码执行程序 - 全部运行」（繁體中文「執行階段－全部執行」），随后卷动到页面底部，开始填写执行本脚本所需的信息。\n",
         "2. `User-Agent` 字符串：点击提供的链接，将页面上半部分文本框内的内容复制并填入。（通常以 `Mozilla/5.0` 开始）\n",
         "3. `User ID`：打开 Bangumi 首页，点击右上角个人头像进入个人主页，个人主页的网址的最后一部分即为 User ID。若未自定义通常为数字。\n",
-        "~~4. `Cookies.txt`：需要使用浏览器插件导出 Bangumi 主站的 Cookies。点击链接安装插件，然后打开 Bangumi 主页，点击插件图标，选择 Export，将下载文件夹中新增的 txt 上传即可。（文件名通常是一长串字符+数字 (UUID)）。~~ （见上方重要安全警告）\n",
+        "4. `Cookie`：打开 Bangumi 首页，按下 F12 打开「开发者工具」，在「控制台」中输入以下指令：`console.log(document.cookie)`，复制输出的内容即可。通常为较长的，包含 `chii` 字样的字符串。\n",
         "5. 选择导出内容，以及是否要深度导出。不勾选深度导出时，导出内容仅为讨论/日志/目录的列表，包含如标题、ID、创建时间、URL 等元数据，但不含具体的数据。勾选深度导出则会同时导出元数据和具体数据（讨论和日志以 HTML 网页形式，目录同时以 HTML 网页和 JSON 形式）。\n",
         "6. 最后点击「运行」以启动导出过程。执行完成会自动触发 `dump.zip` 的下载。\n",
         "\n",
@@ -40,8 +43,6 @@
         "## 常见问题\n",
         "\n",
         "表单可能需要稍等一会才会显示（需要等待运行时分配，进度会在右上角显示），请耐心等待，最长应该不会超过一分钟。\n",
-        "\n",
-        "~~上传 `Cookies.txt` 的过程中没有进度显示，需要稍等一会。也可以用 Colab 界面左侧的文件面板上传。~~\n",
         "\n",
         "为了避免对 Bangumi 服务器造成过大压力，每个网络请求之间会间隔一秒，还请耐心等待。\n",
         "\n",
@@ -58,7 +59,6 @@
       "source": [
         "from ipywidgets import interact, widgets\n",
         "from IPython.display import display\n",
-        "import json\n",
         "from google.colab import files\n",
         "\n",
         "display(widgets.HTML(value='<h3>运行参数</h3>'))\n",
@@ -71,13 +71,12 @@
         "display(ua)\n",
         "\n",
         "display(widgets.HTML(value='获取 User ID：打开 <a href=\"https://www.bgm.tv/\" target=\"_blank\">Bangumi 首页</a>，点击右上角头像进入个人主页，网址最后的部分即为 User ID （https://bgm.tv/user/{user_id}）<br> 通常为 6 位数字。注意不是用户昵称！'))\n",
-        "user_id = widgets.Text(value='',placeholder='通常为数字，不是用户名',description='User ID:',disabled=False)\n",
+        "user_id = widgets.Text(value='',placeholder='通常为数字，不是昵称，不包含@',description='User ID:',disabled=False)\n",
         "display(user_id)\n",
         "\n",
-        "# display( widgets.HTML(value='上传 Cookies.txt，可以通过 <a href=\"https://chrome.google.com/webstore/detail/get-cookiestxt/bgaddhkoddajcdgocldbbfleckgcbcid\" target=\"_blank\">Get Cookies.txt</a> 插件获取。 '))\n",
-        "\n",
-        "cookies_upload = widgets.FileUpload(accept='.txt',multiple=False)\n",
-        "display(cookies_upload)\n",
+        "display( widgets.HTML(value='获取 Cookie：打开 <a href=\"https://www.bgm.tv/\" target=\"_blank\">Bangumi 首页</a>，按下 F12 打开「开发者工具」，在「控制台」中输入以下指令后按下回车：<span style=\"font-family: monospace\">  console.log(document.cookie)  </span>，复制输出的内容即可。'))\n",
+        "cookie_str = widgets.Text(value='',placeholder='很长的字符串，包含 chii_',description='Cookie:',disabled=False)\n",
+        "display(cookie_str)\n",
         "\n",
         "display(widgets.HTML(value='<hr> <h3>备份内容</h3> 作者个人建议：先不勾选「深度备份」，备份一次基础数据；然后再对每个项目单独勾选深度备份。'))\n",
         "\n",
@@ -101,7 +100,7 @@
         "\n",
         "display(widgets.HTML(value='深度备份（不仅备份讨论/日志/收藏列表，也备份对应的网页）'))\n",
         "\n",
-        "deep = widgets.Checkbox(value=True, description='深度备份', indent=True)\n",
+        "deep = widgets.Checkbox(value=False, description='深度备份', indent=True)\n",
         "display(deep)\n",
         "\n",
         "\n",
@@ -110,26 +109,18 @@
         "display(button)\n",
         "\n",
         "def callback(wdgt):\n",
-        "    if len(cookies_upload.value.values()) == 0:\n",
-        "      print(\"没有上传 Cookies.txt？运行已停止。\")\n",
-        "      return\n",
         "\n",
-        "    print(\"上传中，请稍后...\")\n",
-        "    with open(\"bangumi_cookie.txt\", \"wb\") as fp:\n",
-        "      for k, v in cookies_upload.value.items():\n",
-        "        fp.write(v[\"content\"])\n",
-        "        break\n",
-        "    print(\"上传完成\")\n",
-        "\n",
-        "    !git clone https://github.com/jerrylususu/bangumi-takeout-py\n",
-        "    !pip install requests tqdm\n",
+        "    !git clone --depth=1 https://github.com/jerrylususu/bangumi-takeout-py \n",
+        "    !cd bangumi-takeout-py && git log -n1 --format=\"commit: %h\"\n",
         "    !mv bangumi-takeout-py/* .\n",
         "    !rm -rf bangumi-takeout-py\n",
+        "    !pip install -r requirements.txt\n",
         "    \n",
         "    import dump_personal\n",
         "\n",
         "    dump_personal.main(user_id=user_id.value, \n",
-        "                       user_agent=ua.value, \n",
+        "                       user_agent=ua.value,\n",
+        "                       cookie_str=cookie_str.value, \n",
         "                       topic=topic.value, \n",
         "                       reply_topic=reply_topic.value,\n",
         "                       blog=blog.value, \n",
