fix: 修复 colab 笔记本获取最新存档失败的 bug

--- a/bangumi_takeout_colab.ipynb
+++ b/bangumi_takeout_colab.ipynb
@@ -96,10 +96,12 @@
         "    import fetch\n",
         "    import generate_html\n",
         "    import generate_csv\n",
+        "    from utils import get_newest_archive\n",
         "\n",
         "    if select.value == \"Bangumi Archive\":\n",
         "      print(\"downloading archive data\")\n",
-        "      wget_result = !wget https://github.com/bangumi/Archive/releases/download/archive/dump.zip\n",
+        "      download_url = get_newest_archive()\n",
+        "      wget_result = !wget {download_url} -O dump.zip\n",
         "      unzip_result = !unzip dump.zip\n",
         "\n",
         "    with open(\".bgm_token\",\"w\",encoding=\"u8\") as f:\n",
